# Nyxel

./: CMakeLists.txt  README.md
resources/: colors.txt
src/: main.cpp
